--- a/_sass/_variations.scss
+++ b/_sass/_variations.scss
@@ -14,7 +14,9 @@ $engagement-color   : #0c3b31;
 // #332a29
 // #2b2a32
 // #2f2e38
-$organizing-color   : #2f2e38;
+// #34323e
+// #322f42
+$organizing-color   : #322f42;
 
 // #1d2f21
 // #264a47
